--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-sonar.projectKey=Hello-World
+sonar.projectKey=shashank-ssriva_Hello-World-DevOps-Training
 sonar.projectName=Hello-World
 sonar.host.url=https://sonarcloud.io/
 sonar.organization=shashank-ssriva-github
